--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # From .NET Core 3.0 you can use the command: `dotnet new gitignore` to generate a customizable .gitignore file
 
+appsettings.json
+
 *.swp
 *.*~
 project.lock.json
