--- a/appsettings.json
+++ b/appsettings.json
@@ -27,7 +27,7 @@
     "SecretKey": "ThisIsASecretKey123!@#4567890vtvtvtvtvyybybbygvy"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-E2V3V1O;Database=JobRecruitment;Trusted_Connection=True;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=TAYHOANG;Database=JobRecruitment;Trusted_Connection=True;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
